# lunch

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
src/desktop/: errors.rs  iteratorext.rs  locale.rs  mod.rs  parse.rs
src/lunch/: env.rs  errors.rs  exec.rs  iteratorext.rs  keyword.rs  launch.rs  locale.rs  mod.rs  parse.rs  search.rs
src/lunch/freedesktop/: application.rs  desktopfile.rs  entry.rs  env.rs  exec.rs  locale.rs  mod.rs  parse.rs
